[gd_scene load_steps=4 format=3 uid="uid://xrfi3xtibqjh"]

[ext_resource type="Script" path="res://Gun.gd" id="1_5ku6h"]
[ext_resource type="PackedScene" uid="uid://lviwd7iyvso6" path="res://Weapons/Bullet.tscn" id="2_27nrf"]
[ext_resource type="PackedScene" uid="uid://dyom6spkhd2u0" path="res://Weapons/PlayerBullet.tscn" id="3_cadtv"]

[node name="Gun" type="Node2D"]
script = ExtResource("1_5ku6h")
Max_Ammo_for_Gun = 270
Gun_Max_Ammo = 10
Current_ammo = 8
RPCBullet = ExtResource("2_27nrf")
PlayerBullet = ExtResource("3_cadtv")

[node name="Label" type="Label" parent="."]
offset_left = 5.0
offset_top = 48.0
offset_right = 45.0
offset_bottom = 71.0

[node name="Label2" type="Label" parent="."]
offset_left = -4.0
offset_top = -66.0
offset_right = 36.0
offset_bottom = -43.0

[node name="Timer" type="Timer" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="Shoot_Delay" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Shoot_Delay" to="." method="_on_shoot_delay_timeout"]
